v3.00 beta2 - ?

- ADDED: Preliminary support for Zeiss ZVI file format


v3.00 beta1 - Wednesday, September 1, 2004

- ADDED: Support for Metamorph STK file format
- ADDED: Support for Olympus Fluoview file format
- ADDED: Support for Openlab LIFF file format (requires QuickTime for Java)
- ADDED: Dimensional collapse transform
- ADDED: Weighted multispectral component mapping transform
- ADDED: Ability to change maximum memory value from the System panel
- ADDED: Ability to change graphical "Look & Feel" from the System panel
- ADDED: Begin work on comprehensive save/restore/undo/redo using OME-CA XML

- FIXED: Tons of bugfixes and improvements

- TWEAK: Switched Windows distribution to ZIP file; no need for an installer
- TWEAK: Windows distribution now defaults to "JGoodies Windows" Look & Feel
- TWEAK: Linux distribution now defaults to "JGoodies Plastic 3D" Look & Feel
- TWEAK: Fixed up all distribution packages

-------------------------------------------------------------------------------
v2.31 - Thursday, July 1, 2004

- ADDED: "Burn" button to force full-resolution burn-in
- ADDED: Automation option to delay burn-in until "Burn" button is pressed
- ADDED: Measurement flags (markers without a fixed dimensional position)

- FIXED: Long delay before first screen dataset is computed

- TWEAK: Switched Windows installer to JSmooth + Inno Setup
- TWEAK: Switched Linux distribution to a simple script file

- GONE: Eliminated Solaris distribution


v2.30d - Monday, June 14, 2004

- FIXED: Bugs when Java3D is not installed
- FIXED: Greatly improved burn-in function / slider responsiveness


v2.30c - Tuesday, April 13, 2004

- FIXED: Issue with "Open file" functionality
- FIXED: Bug when nothing is mapped to Z-axis


v2.30b - Tuesday, March 30, 2004

- FIXED: Number doubling bug in file pattern detection logic


v2.30a - Wednesday, February 18, 2004

- FIXED: Minor data import bug

- GONE: Old "import series" dialog box ("Import group" does everything)

